--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
 
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="mammals/index.html">Mammal thing</a>
+        <a href="lists/index.html">Lists</a>
+        <a href="music/index.html">Music</a>
+      </div>
 
 </body>
 </html>
