--- a/challenge7/index.html
+++ b/challenge7/index.html
@@ -15,10 +15,11 @@ I am still learning how to do this, so let me show you my skillz,
 <h1>Here is my unordered list.</h1>
 
 <ol>
-<li>Here is how you <b>bold.</b></li>
-<li>Here is how you make <i>italics.</i>
-<li>And here is a cool photo from ________.	</i>	
-<li>But don't worry! I can add links too! Here are some links I like ______________, ____________, _____________.</i>
+    <li>Here is how you <b>bold.</b></li>
+    <li>Here is how you make <i>italics.</i>
+    <li>And here is a cool photo from unsplash.	<img src="pic_trulli.jpg" alt="Italian Trulli"></i>
+
+    <li>But don't worry! I can add links too! Here are some links I like <a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a>, <a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a>, _____________.</i>
 </ol>
 
 </body>
