--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="mammals/index.html">Mammal thing</a>
+        <a href="marine-mammal-challenge/index.html">Marine Mammal Challenge</a>
         <a href="lists/index.html">Lists</a>
         <a href="music/index.html">Music</a>
       </div>
