Sort of finished madlibs

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 
 <body>
 
+  <div class="margin">
+    <h1>Challenges</h1>
+
     <div class="topnav">
         <a class="active" href="#home">Home</a>
-        <a href="marine-mammal-challenge/index.html">Marine Mammal Challenge</a>
-        <a href="lists/index.html">Lists</a>
-        <a href="music/index.html">Music</a>
+        <a href="https://x.thunkable.com/copy/6280a1384ff09bd56802c5031dc3376b">Thunkable App</a>
+        <a href="list-creation-challenge/index.html">List Creation</a>
+        <a href="marine-mammal-challenge/index.html">Marine Mammal</a>
+        <a href="madlibs-challenge/index.html">Madlibs</a>
+        <a href="nested-elements-challenge/index.html">Nested Elements</a>
+    </div>
+
+    <h1>Random</h1>
+
+      <div class="topnav">
+          <a class="active" href="#home">Home</a>
+          <a href="codepen-challenge/index.html">Code Pen</a>
       </div>
+    </div>
 
 </body>
 </html>
