--- a/madlibs-challenge/index.html
+++ b/madlibs-challenge/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Title of the document</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -17,9 +18,9 @@ I am still learning how to do this, so let me show you my skillz,
 <ol>
     <li>Here is how you <b>bold.</b></li>
     <li>Here is how you make <i>italics.</i>
-    <li>And here is a cool photo from unsplash.	<img src="pic_trulli.jpg" alt="Italian Trulli"></i>
+    <li>And here is a cool photo from unsplash.	<br><img src="images/kermit-two.jpg" alt="Kermit"></i>
 
-    <li>But don't worry! I can add links too! Here are some links I like <a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a>, <a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a>, _____________.</i>
+    <li>But don't worry! I can add links too! Here are some links I like <a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a>, <a href="https://en.wikipedia.org/wiki/Chocolate">Chocolate</a>, <a href="https://en.wikipedia.org/wiki/Potato">Potato</a>.</i>
 </ol>
 
 </body>
