Nested Elements challenge

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <a href="list-creation-challenge/index.html">List Creation</a>
         <a href="marine-mammal-challenge/index.html">Marine Mammal</a>
         <a href="madlibs-challenge/index.html">Madlibs</a>
-        <a href="nested-elements-challenge/index.html">Nested Elements</a>
+        <a href="nested-elements-challenge/index.html">Nested Elements (epilepsy warning?)</a>
     </div>
 
     <h1>Random</h1>
 
       <div class="topnav">
           <a class="active" href="#home">Home</a>
-          <a href="codepen-challenge/index.html">Code Pen</a>
+          <a href="codepen-challenge/index.html">Code Pen Music</a>
       </div>
     </div>
 
