--- a/madlibs-challenge/index.html
+++ b/madlibs-challenge/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Title of the document</title>
+<title>Madlibs</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
