--- a/videos-maps-metatags-challenge/index.html
+++ b/videos-maps-metatags-challenge/index.html
@@ -6,7 +6,7 @@
 
         <title>iframe</title>
 
-        <LINK href="styles.css" rel="stylesheet" type="text/css">
+        <link href="styles.css" rel="stylesheet" type="text/css">
         <link href="//db.onlinewebfonts.com/c/7cc6719bd5f0310be3150ba33418e72e?family=Comic+Sans+MS" rel="stylesheet" type="text/css"/>
    
     </head>
