--- a/index.html
+++ b/index.html
@@ -2,46 +2,55 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
+  <title>random</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-
-      <h1>Challenges</h1>
-      
+  <div class="rectangletwo">   
+    <h1>CHALLENGES</h1>
+    <div class="margin2"> 
       <div class="topnav">
-          <a class="active" href="#home">Home</a>
-          <a href="https://x.thunkable.com/copy/6280a1384ff09bd56802c5031dc3376b">Thunkable App</a>
-          <a href="codepen-challenge/index.html">Code Pen Music</a>
-          <a href="list-creation-challenge/index.html">List Creation</a>
-          <a href="marine-mammal-challenge/index.html">Marine Mammal</a>
-          <a href="madlibs-challenge/index.html">Madlibs</a>
-          <a href="nested-elements-challenge/index.html">Nested Elements (epilepsy warning?)</a>
-          <a href="junior-developer-challenge/index.html">Junior Developer (work in progress)</a>
-          <a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags (work in progress)</a>
-          <a href="fix-the-beginner-mistakes-challenge/index.html">Fix the beginner Mistakes (work in progress)</a>
-          <a href="css-riddle-challenge/index.html">CSS Riddle</a>
-          <a href="fonts-challenge/index.html"> Use Google Web Fonts</a>
+          <ul style="list-style: none;">
+            <!--<li><a class="active" href="#home">Home</a></li>-->
+            <li><a href="https://x.thunkable.com/copy/6280a1384ff09bd56802c5031dc3376b">Thunkable App</a></li>
+            <li><a href="codepen-challenge/index.html">Code Pen Music</a></li>
+            <li><a href="list-creation-challenge/index.html">List Creation</a></li>
+            <li><a href="marine-mammal-challenge/index.html">Marine Mammal</a></li>
+            <li><a href="madlibs-challenge/index.html">Madlibs</a></li>
+            <li><a href="nested-elements-challenge/index.html">Nested Elements <br>(epilepsy warning?)</a></li>
+            <li><a href="junior-developer-challenge/index.html">Junior Developer <br>(work in progress)</a></li>
+            <li><a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags</a></li>
+            <li><a href="fix-the-beginner-mistakes-challenge/index.html">Fix the Beginner Mistakes</a></li>
+            <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
+            <li><a href="fonts-challenge/index.html"> Use Google Web Fonts</a></li>
+            <li><a href="color-your-quote-challenge/index.html"> Color Your Quote <br>(work in progress)</a></li>
+          </ul>
+        </div>  
       </div>
+  </div>
 
-  <div class="rectangle"></div>
 
-      <article>
-        <section>M</section>
-        <section>E</section>
-        <section>L</section>
-        <section>I</section>
-        <section>S</section>
-        <section>S</section>
-        <section>A</section>
-        <section></section>
-        <section></section>
-        <section>D.</section>
-      </article>
+  <div class="margin">
+    <div class="rectangle"></div> 
+
+        <article>
+          <section>M</section>
+          <section>E</section>
+          <section>L</section>
+          <section>I</section>
+          <section>S</section>
+          <section>S</section>
+          <section>A</section>
+          <section></section>
+          <section></section>
+          <section>D.</section>
+        </article>
+      </div> 
 
 
 </body>
