--- a/css-riddle-challenge/index.html
+++ b/css-riddle-challenge/index.html
@@ -2,15 +2,19 @@
 <html>
     <head>
             <LINK href="styles.css" rel="stylesheet" type="text/css">
+            <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        
-        <div class="rainbow-text">
             <h1>Question:</h1>
-            <p> A house has four walls. All of the walls are facing south, and a bear is circling the house. What color is the bear?</p>
+            <div class="rainbow-text">
+                <p> A house has four walls. All of the walls are facing south, and a bear is circling the house. What color is the bear?</p>
+            </div>
             <h2>answer:</h2>
-            <p>The house is on the north pole, so the circling bear is white.</p>
-        </div>
+            <div class="rainbow-text">
+                <p>The house is on the north pole, so the circling bear is white.</p>
+            </div>
     </body>
 </html>
+
