tile background image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <li><a href="fix-the-beginner-mistakes-challenge/index.html">Fix the Beginner Mistakes</a></li>
             <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
             <li><a href="fonts-challenge/index.html"> Use Google Web Fonts</a></li>
-            <li><a href="color-your-quote-challenge/index.html"> Color Your Quote <br>(work in progress)</a></li>
+            <li><a href="color-your-quote-challenge/index.html"> Color Your Quote</a></li>
+            <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
           </ul>
         </div>  
       </div>
