crazy color thing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>random</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC&display=swap" rel="stylesheet">
 </head>
@@ -27,9 +27,11 @@
             <li><a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags</a></li>
             <li><a href="fix-the-beginner-mistakes-challenge/index.html">Fix the Beginner Mistakes</a></li>
             <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
-            <li><a href="fonts-challenge/index.html"> Use Google Web Fonts</a></li>
-            <li><a href="color-your-quote-challenge/index.html"> Color Your Quote</a></li>
+            <li><a href="fonts-challenge/index.html">Use Google Web Fonts</a></li>
+            <li><a href="color-your-quote-challenge/index.html">Color Your Quote</a></li>
             <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
+            <li><a href="add-some-crazy-color-challenge/index.html">Add Some Crazy Color</a></li>
+            <li><a href="monochromatic-color-palette-with-a-border-challenge/index.html">Monochromatic Color <br>Palette with a Border</a></li>
           </ul>
         </div>  
       </div>
