--- a/monochromatic-color-palette-with-a-border-challenge/index.html
+++ b/monochromatic-color-palette-with-a-border-challenge/index.html
@@ -6,7 +6,19 @@
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div class="border-div"> <div class="color-container" id="color-div-1"></div>
+        <div class="border-div"> 
+            <div class="color-container" id="color-div-1"></div>
+
+            <div class="color-container" id="color-div-2"></div>
+
+            <div class="color-container" id="color-div-3"></div>
+     
+            <div class="color-container" id="color-div-4"></div>
+ 
+            <div class="color-container" id="color-div-5"></div>
+        </div>
     </body>
 </html>
+
+
 
