--- a/css-riddle-challenge/index.html
+++ b/css-riddle-challenge/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <title>CSS Riddle Challenge</title>
             <LINK href="styles.css" rel="stylesheet" type="text/css">
             <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
