--- a/index.html
+++ b/index.html
@@ -20,25 +20,33 @@
               <!--<li><a class="active" href="#home">Home</a></li>-->
               <li><a href="https://x.thunkable.com/copy/6280a1384ff09bd56802c5031dc3376b">Thunkable App</a></li>
               <li><a href="codepen-challenge/index.html">Code Pen Music</a></li>
-              <li><a href="list-creation-challenge/index.html">List Creation</a></li>
               <li><a href="marine-mammal-challenge/index.html">Marine Mammal</a></li>
+              <li><a href="list-creation-challenge/index.html">List Creation</a></li>
               <li><a href="madlibs-challenge/index.html">Madlibs</a></li>
+              <li><a href="junior-developer-challenge/index.html">Junior Web Developer</a></li>
               <li><a href="nested-elements-challenge/index.html">Nested Elements <br>(epilepsy warning?)</a></li>
-              <li><a href="junior-developer-challenge/index.html">Junior Developer <br>(work in progress)</a></li>
-              <li><a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags</a></li>
               <li><a href="fix-the-beginner-mistakes-challenge/index.html">Fix the Beginner Mistakes</a></li>
-              <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
-              <li><a href="fonts-challenge/index.html">Use Google Web Fonts</a></li>
+              <li><a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags</a></li>
               <li><a href="color-your-quote-challenge/index.html">Color Your Quote</a></li>
-              <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
+              <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
               <li><a href="add-some-crazy-color-challenge/index.html">Add Some Crazy Color</a></li>
+              <li><a href="fonts-challenge/index.html">Use Google Web Fonts</a></li>
+              <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and padding</a></li>
+              <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
               <li><a href="monochromatic-color-palette-with-a-border-challenge/index.html">Monochromatic Color <br>Palette with a Border</a></li>
+              <!--flower challenge-->
+              <!--choose your challenge-->
+              <!--create the exact image-->
+              <!--rename the classes-->
+              <!--classes, ids, quoates-->
+              <!--website building skills-->
+              <!--float the boxes-->
               <li><a href="clean-up-the-messy-floats-challenge/index.html">Clean Up The Messy Floats</a></li>
+              <!--use floates to create the image-->
             </ul>
           </div>  
         </div>
   </div>
-
 
   <div class="margin">
     <div class="rectangle"></div> 
