changed rgb to hex

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-
+    <div id="bg">
+        <img src="images/cactus.jpg" alt="">
+      </div>
+      
   <div class="rectangletwo">   
     <h1>CHALLENGES</h1>
     <div class="rectanglethree"> 
@@ -31,7 +34,7 @@
               <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
               <li><a href="add-some-crazy-color-challenge/index.html">Add Some Crazy Color</a></li>
               <li><a href="fonts-challenge/index.html">Use Google Web Fonts</a></li>
-              <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and padding</a></li>
+              <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and Padding</a></li>
               <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
               <li><a href="monochromatic-color-palette-with-a-border-challenge/index.html">Monochromatic Color <br>Palette with a Border</a></li>
               <!--flower challenge-->
