--- a/marine-mammal-challenge/index.html
+++ b/marine-mammal-challenge/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title of the document</title>
+        <title>Marine Mammal Challenge</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="//db.onlinewebfonts.com/c/7cc6719bd5f0310be3150ba33418e72e?family=Comic+Sans+MS" rel="stylesheet" type="text/css"/>
 
