--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 </head>
 
 <body>
-    <div id="bg">
-        <img src="images/cactus.jpg" alt="">
-      </div>
       
   <div class="rectangletwo">   
     <h1>CHALLENGES</h1>
@@ -37,37 +34,21 @@
               <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and Padding</a></li>
               <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
               <li><a href="monochromatic-color-palette-with-a-border-challenge/index.html">Monochromatic Color <br>Palette with a Border</a></li>
-              <!--flower challenge-->
+              <li><a href="flower-challenge/index.html">Flower challenge</a></li>
+              <li><a href="choose-your-challenges/index.html">Choose Your Challenge</a></li>
               <!--choose your challenge-->
-              <!--create the exact image-->
+              <li><a href="create-the-exact-image-challenge/index.html">Create the Exact Image <br>Challenge</a></li>
               <!--rename the classes-->
               <!--classes, ids, quoates-->
               <!--website building skills-->
               <!--float the boxes-->
               <li><a href="clean-up-the-messy-floats-challenge/index.html">Clean Up The Messy Floats</a></li>
               <!--use floates to create the image-->
+              <li><a href="holstee-manifesto-challenge/index.html">Holstee Manifesto</a></li>
             </ul>
           </div>  
         </div>
   </div>
-
-  <div class="margin">
-    <div class="rectangle"></div> 
-
-        <article>
-          <section>M</section>
-          <section>E</section>
-          <section>L</section>
-          <section>I</section>
-          <section>S</section>
-          <section>S</section>
-          <section>A</section>
-          <section></section>
-          <section></section>
-          <section>D.</section>
-        </article>
-      </div> 
-
 
 </body>
 </html>
