Work submitted for holstee manifesto thing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <!--float the boxes-->
               <li><a href="clean-up-the-messy-floats-challenge/index.html">Clean Up The Messy Floats</a></li>
               <!--use floates to create the image-->
-              <li><a href="holstee-manifesto-challenge/index.html">Holstee Manifesto</a></li>
+              <li><a href="holstee-manifesto-challenge/index.html">Holstee Manifesto Challenge</a></li>
             </ul>
           </div>  
         </div>
