all the challenges I completed this semester...

--- a/classes-ids-and-quotes-challenge/index.html
+++ b/classes-ids-and-quotes-challenge/index.html
@@ -23,6 +23,10 @@
                 “A woman without a man is like a fish without a bicycle.” 
                 <br>― Irina Dunn</div>
 
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
+
     </body>
 </html>
 
