--- a/junior-developer-challenge/index.html
+++ b/junior-developer-challenge/index.html
@@ -21,14 +21,13 @@
             <div class="square2"></div>
         <div class="margin"> 
 
-            <h3>Design Tech High School Blog</h3>
+            <h3>Sources</h3>
 
                 <nav>
                     <ul>
-                        <li><a href="https://www.google.com">DESIGN AND TECH</li>
-                        <li><a href="https://www.google.com">CAREER SUCCESS</a></li>
-                        <li><a href="https://www.google.com">SOCIAL MEDIA &amp; MARKETING</a></li>
-                        <li><a href="https://www.google.com">TECH BUZZ</a></li>
+                        <li><a href="https://www.britannica.com/topic/Lutheranism">BRITANNICA.COM</li>
+                        <li><a href="https://www.history.com/topics/reformation/martin-luther-and-the-95-theses">HISTORY.COM</a></li>
+                        <li><a href="https://www.biography.com/religious-figure/martin-luther">BIOGRAPHY.COM</a></li>
                     </ul>
                 </nav>
 
