--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <li><a href="marine-mammal-challenge/index.html">Marine Mammal</a></li>
               <li><a href="list-creation-challenge/index.html">List Creation</a></li>
               <li><a href="madlibs-challenge/index.html">Madlibs</a></li>
-              <li><a href="junior-developer-challenge/index.html">Junior Web Developer</a></li>
+              <li><a href="junior-developer-challenge/index.html">Junior Web Developer (finished not submitted)</a></li>
               <li><a href="nested-elements-challenge/index.html">Nested Elements <br>(epilepsy warning?)</a></li>
               <li><a href="fix-the-beginner-mistakes-challenge/index.html">Fix the Beginner Mistakes</a></li>
               <li><a href="videos-maps-metatags-challenge/index.html">Videos Maps Metatags</a></li>
@@ -31,20 +31,21 @@
               <li><a href="css-riddle-challenge/index.html">CSS Riddle</a></li>
               <li><a href="add-some-crazy-color-challenge/index.html">Add Some Crazy Color</a></li>
               <li><a href="fonts-challenge/index.html">Use Google Web Fonts</a></li>
-              <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and Padding</a></li>
+              <li><a href="add-margins-and-padding-challenge/index.html">Add Margins and Padding (finished not submitted)</a></li>
               <li><a href="tile-your-background-image-challenge/index.html">Tile Your Background <br>Image</a></li>
               <li><a href="monochromatic-color-palette-with-a-border-challenge/index.html">Monochromatic Color <br>Palette with a Border</a></li>
-              <li><a href="flower-challenge/index.html">Flower challenge</a></li>
+              <li><a href="flower-challenge/index.html">Flower Challenge (finished not submitted)</a></li>
               <li><a href="choose-your-challenges/index.html">Choose Your Challenge</a></li>
               <!--choose your challenge-->
-              <li><a href="create-the-exact-image-challenge/index.html">Create the Exact Image <br>Challenge</a></li>
-              <!--rename the classes-->
-              <!--classes, ids, quoates-->
+              <li><a href="create-the-exact-image-challenge/index.html">Create the Exact Image (finished not submitted)</li>
+              <li><a href="rename-the-classes-challenge/index.html">Rename the Classes (finished not submitted)</li>
+                <li><a href="classes-ids-and-quotes-challenge/index.html">Classes ID's Quotes (finished not submitted)</li>
               <!--website building skills-->
               <!--float the boxes-->
-              <li><a href="clean-up-the-messy-floats-challenge/index.html">Clean Up The Messy Floats</a></li>
-              <!--use floates to create the image-->
+              <li><a href="clean-up-the-messy-floats-challenge/index.html">Clean Up The Messy Floats (finished not submitted)</a></li>
+              <li><a href="use-floats-to-create-the-image-challenge/index.html">Use Floats to Create the Image</a></li>
               <li><a href="holstee-manifesto-challenge/index.html">Holstee Manifesto Challenge</a></li>
+              <li><a href="code-the-design-challenge/index.html">Code The Design</a></li>
             </ul>
           </div>  
         </div>
